feat: switch to use kysely for main db

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_NAME}?schema=public
+POSTGRES_POOL_MIN=1
+POSTGRES_POOL_MAX=10
 
 # Sql Server Database
 SQL_SERVER_HOST=localhost
