--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"scripts": {
 		"dev": "TZ=UTC NODE_ENV=development SWCRC=true nodemon --exec node -r @swc-node/register src/index.ts",
-		"test": "TZ=UTC NODE_ENV=test LOG_LEVEL=error SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
+		"test": "TZ=UTC NODE_ENV=test LOG_LEVEL=debug SWCRC=true jest --runInBand --detectOpenHandles --forceExit --coverage",
 		"lint": "tsc && prettier --check . && eslint .",
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"format": "prettier --check .",
@@ -19,7 +19,6 @@
 	"description": "",
 	"dependencies": {
 		"@auth0/nextjs-auth0": "3.5.0",
-		"@prisma/client": "5.19.1",
 		"@scalar/express-api-reference": "0.4.149",
 		"@sinclair/typebox": "0.33.9",
 		"@types/luxon": "3.4.2",
@@ -33,6 +32,7 @@
 		"kysely": "0.27.4",
 		"lodash": "4.17.21",
 		"luxon": "3.5.0",
+		"pg": "8.12.0",
 		"pino": "9.4.0",
 		"pino-http": "10.3.0",
 		"pino-pretty": "11.2.2",
@@ -60,6 +60,7 @@
 		"@types/jest": "29.5.12",
 		"@types/lodash": "4.17.7",
 		"@types/node": "22.5.4",
+		"@types/pg": "8.11.9",
 		"@types/supertest": "6.0.2",
 		"eslint": "9.10.0",
 		"eslint-config-prettier": "9.1.0",
@@ -77,6 +78,7 @@
 		"openapi-typescript": "7.4.0",
 		"prettier": "3.3.3",
 		"prisma": "5.19.1",
+		"prisma-kysely": "1.8.0",
 		"supertest": "7.0.0",
 		"typescript": "5.6.2",
 		"typescript-eslint": "8.5.0"
