--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
 	"description": "",
 	"dependencies": {
 		"@auth0/nextjs-auth0": "3.5.0",
-		"@scalar/express-api-reference": "0.4.149",
-		"@sinclair/typebox": "0.33.9",
+		"@scalar/express-api-reference": "0.4.153",
+		"@sinclair/typebox": "0.33.12",
 		"@types/luxon": "3.4.2",
 		"compression": "1.7.4",
 		"cors": "2.8.5",
 		"dotenv": "16.4.5",
 		"express": "4.21.0",
 		"express-oauth2-jwt-bearer": "1.6.0",
-		"express-openapi-validator": "5.3.5",
+		"express-openapi-validator": "5.3.7",
 		"helmet": "7.1.0",
 		"kysely": "0.27.4",
 		"lodash": "4.17.21",
 		"luxon": "3.5.0",
-		"pg": "8.12.0",
+		"pg": "8.13.0",
 		"pino": "9.4.0",
 		"pino-http": "10.3.0",
 		"pino-pretty": "11.2.2",
@@ -46,7 +46,7 @@
 		"@ngneat/falso": "7.2.0",
 		"@side/jest-runtime": "1.1.0",
 		"@swc-node/register": "1.10.9",
-		"@swc/cli": "0.4.0",
+		"@swc/cli": "0.4.1-nightly.20240914",
 		"@swc/core": "1.7.26",
 		"@swc/jest": "0.2.36",
 		"@trivago/prettier-plugin-sort-imports": "4.3.0",
@@ -57,12 +57,12 @@
 		"@types/eslint__js": "8.42.3",
 		"@types/express": "4.17.21",
 		"@types/express-serve-static-core": "4.19.5",
-		"@types/jest": "29.5.12",
+		"@types/jest": "29.5.13",
 		"@types/lodash": "4.17.7",
-		"@types/node": "22.5.4",
-		"@types/pg": "8.11.9",
+		"@types/node": "22.5.5",
+		"@types/pg": "8.11.10",
 		"@types/supertest": "6.0.2",
-		"eslint": "9.10.0",
+		"eslint": "9.11.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-import-x": "4.2.1",
 		"globals": "15.9.0",
@@ -70,18 +70,18 @@
 		"jest": "29.7.0",
 		"jest-extended": "4.0.2",
 		"jest-mock-extended": "4.0.0-beta1",
-		"jose": "5.8.0",
-		"kysely-codegen": "0.16.6",
+		"jose": "5.9.2",
+		"kysely-codegen": "0.16.8",
 		"lint-staged": "15.2.10",
 		"nock": "13.5.5",
-		"nodemon": "3.1.4",
-		"openapi-typescript": "7.4.0",
+		"nodemon": "3.1.7",
+		"openapi-typescript": "7.4.1",
 		"prettier": "3.3.3",
 		"prisma": "5.19.1",
 		"prisma-kysely": "1.8.0",
 		"supertest": "7.0.0",
 		"typescript": "5.6.2",
-		"typescript-eslint": "8.5.0"
+		"typescript-eslint": "8.6.0"
 	},
 	"prisma": {
 		"schema": "src/data/main/schema.prisma",
